--- a/Express_BackEnd/package.json
+++ b/Express_BackEnd/package.json
@@ -9,7 +9,10 @@
   "author": "Pranav Sharma",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mysql2": "^3.2.0",
+    "package.json": "^2.0.1"
   }
 }
