--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -6,6 +6,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^5.7.3",
+    "@react-navigation/stack": "^5.9.0",
     "axios": "^1.3.4",
     "expo": "^48.0.7",
     "expo-constants": "~14.2.1",
@@ -22,8 +25,8 @@
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
+    "react-native-safe-area-context": "^3.1.4",
+    "react-native-screens": "^2.10.1",
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4"
   },
