--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -31,7 +31,9 @@
     "react-native-web": "~0.18.7",
     "react-navigation": "^4.4.4",
     "react-redux": "^8.0.5",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "react-native-maps": "1.3.2",
+    "@react-native-async-storage/async-storage": "1.17.11"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
