--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-auto-stylesheet": "^0.3.4",
     "react-native-dotenv": "^3.4.8",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-maps": "1.3.2",
